[package]
name = "xactor"
version = "0.7.0"
authors = ["sunli <scott_s829@163.com>"]
description = "Xactor is a rust actors framework based on async-std"
edition = "2018"
publish = true
license = "MIT"
documentation = "https://docs.rs/xactor/"
homepage = "https://github.com/sunli829/xactor"
repository = "https://github.com/sunli829/xactor"
keywords = ["actor", "futures", "async", "xactor", "async-std"]
categories = ["network-programming", "asynchronous"]
readme = "README.md"

[dependencies]
futures = "0.3.4"
async-trait = "0.1.24"
async-std = { version = "1.5.0", features = ["attributes"], optional = true }
tokio = { version = "0.2", features = ["rt-threaded", "macros", "blocking", "time"], optional = true }
once_cell = "1.3.1"
anyhow = "1.0.26"
xactor-derive = { path = "xactor-derive", version = "0.7.0"}
fnv = "1.0.6"

[workspace]
members = [
    "xactor-derive"
]

[features]
runtime-tokio = ["tokio"]
runtime-async-std = ["async-std"]

default = ["runtime-async-std"]
