[package]
name = "xactor"
version = "0.7.11"
authors = ["sunli <scott_s829@163.com>"]
description = "Xactor is a rust actors framework based on async-std"
edition = "2021"
publish = true
license = "MIT"
documentation = "https://docs.rs/xactor/"
homepage = "https://github.com/sunli829/xactor"
repository = "https://github.com/sunli829/xactor"
keywords = ["actor", "futures", "async", "xactor", "async-std"]
categories = ["network-programming", "asynchronous"]
readme = "README.md"

[dependencies]
futures = "0.3.21"
async-trait = "0.1.52"
async-std = { version = "1.10.0", features = ["attributes"], optional = true }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros", "time"], optional = true }
once_cell = "1.9.0"
xactor-derive = { path = "xactor-derive", version = "0.7" }
fnv = "1.0.7"
slab = "0.4.5"
anyhow = { version = "1.0.53", optional = true }
eyre = { version = "0.6.6", optional = true }
dyn-clone = "1.0.4"

[workspace]
members = [
    "xactor-derive"
]

[features]
runtime-tokio = ["tokio"]
runtime-async-std = ["async-std"]

default = ["runtime-async-std", "anyhow"]
